Added in Legend with tentative positioning and styling
Changed the temperature false-color to range from gray to red
Better color handling (light/dark) for labels in the Crust tab
Full hemisphere of earth shown on Crust tab when zoomed out
Hid FPS readout by default, added developer option to enable it
Consolidated the time control readout, so now the inner visibility is toggled
# 0.00.10 (59979) Jan 6, 2012
Added "Temperature / Density" views on 1st tab
# 0.00.09 (59977) Jan 6, 2012
Can now only drag plates by their handles. Handle top matches mouse position as well as possible
Don't show handle on plate if it is a lighter plate
Handle rotation based on movement
Changed handle to stick-and-ball style
Reduced ruler size in toolbox for more visibility
Added manual mode time readout
Ruler drags from the top
Bugfix for 2nd tab dragging of tools that doesn't trigger the manual mode motion
# 0.00.08 (59921) Jan 5, 2012
Added majority of UI for controlling the 2nd tab (manual and auto mode).
Now allows mode changes after animation has started
Added simplified handle prototypes
Added temporary (inaccurate) "divergent" boundary animation (reverse of convergent)
Added extra continental crust piece for 2nd tab
Updated 2nd tab view location to a slight side-angle
Fixed reset "freeze" bug
Flipped ruler tick mark labels vertically, added a 4x multiplier to the ruler on the 2nd tab
# 0.00.07 (59864) Jan 3, 2012
1/3/12 Added UI for 2nd tab "Auto" mode with clock, added inaccurate example "convergence" model
# 0.00.06 (59809) Jan 2, 2012
1/2/12 Added start of 2nd tab model (blocky start positions) with drag-drop of crust and initial 2nd tab reset functionality
# 0.00.05 (59777) Dec 29, 2011
Added 2nd tab toolbox, mode-control box and crust chooser box with draggable crust pieces
Added 1st tab labels and redid density gradients (and various internals)
# 0.00.04 (59661) Dec 23, 2011
12/23/11 First LWJGL version, + animation, zoom, and other tweaks
# 0.00.03 (57593) Oct 13, 2011